# docs/swagger.yaml
@@ -96,7 +96,7 @@ definitions:
     properties:
       password:
         maxLength: 255
-        minLength: 1
+        minLength: 6
         type: string
     required:
     - password
@@ -110,11 +110,16 @@ definitions:
     type: object
   user.CreateReq:
     properties:
+      password:
+        maxLength: 255
+        minLength: 6
+        type: string
       username:
         maxLength: 255
         minLength: 1
         type: string
     required:
+    - password
     - username
     type: object
   user.CreateUserResp:
@@ -222,6 +227,10 @@ definitions:
     properties:
       enable:
         type: boolean
+      password:
+        maxLength: 255
+        minLength: 6
+        type: string
       username:
         maxLength: 255
         minLength: 1
